# bosun

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  bosun.example.json  bosun.example.toml  repository.yaml
.github/workflows/: build.yml  ci.yml
bosun/: DOCS.md  config.yaml
bosun/translations/: en.yaml
docker/: run.sh
src/: auth.rs  config.rs  lib.rs  main.rs  proxy.rs  tests.rs
