[package]
name = "bosun"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "stream", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
